修改页头图片+菜单文字的上下边框

--- a/C94-S2-Ply-html/WebContent/0104/css/index.css
+++ b/C94-S2-Ply-html/WebContent/0104/css/index.css
@@ -51,10 +51,13 @@ header>div>div>*{
 header span{
 	height: 50px;
 	line-height: 50px;
-	margin: 10px;
+	margin: 0px 10px;
 	display: inline-block;
 }
 
+header>img{
+	display:block;
+}
 
 
 
